# reGenesis

./: .gitignore  .gitmodules  configure.bat  configure.sh
src/: CMakeLists.txt  genesis.cpp
src/Creature/: CMakeLists.txt  Creature.cpp  Creature.h
src/Graphics/: CMakeLists.txt
src/Graphics/Renderers/: IRenderer.h  OpenGL.cpp  OpenGL.h
src/Graphics/SurfaceCommon/: ISurface.cpp  ISurface.h
src/Graphics/Surfaces/: Sandbox_Game_Of_Life.txt  Surface_SDL.cpp  Surface_SDL.h
src/NeuralNet/: Brain.cpp  Brain.h  CMakeLists.txt  Common.cpp  Common.h  Functions.cpp  Functions.h  Neuron.cpp  Neuron.h  Sandbox_Number_Recog.cpp.txt  TestNeuralNet.cpp.txt
src/Physics/: Basics.cpp  Basics.h  CMakeLists.txt  Debug.cpp  Debug.h  IGeometry.h  KDTree.h  Object.cpp  Object.h  SharedData.h  TestPhysics.cpp  World.cpp  World.h  notes.txt
src/sandbox/boids/: CMakeLists.txt  boids.cpp
src/sandbox/number_recognizer/: CMakeLists.txt  number_recognizer.cpp
