cmake_minimum_required(VERSION 3.0)
project(genesis)
set (Genesis_VERSION_MAJOR 0)
set (Genesis_VERSION_MINOR 1)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG -g")
if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
	set (CMAKE_C_COMPILER clang)
	set (CMAKE_CXX_COMPILER clang++)
endif()
include_directories(.)
add_definitions(-std=c++14 -g)
add_subdirectory(Physics)
add_subdirectory(Graphics)
add_subdirectory(NeuralNet)
add_subdirectory(Creature)
add_executable(genesis genesis.cpp)
target_link_libraries (genesis Creature Graphics NeuralNet Physics)
