cmake_minimum_required(VERSION 3.0)
project(genesis)
set (Genesis_VERSION_MAJOR 0)
set (Genesis_VERSION_MINOR 1)
if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG -g")
	#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -Wpedantic")
	#set (CMAKE_C_COMPILER clang)
	#set (CMAKE_CXX_COMPILER clang++)
endif()
if(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE DEBUG)
endif()
if(MSVC)
	set_directory_properties(PROPERTIES VS_STARTUP_PROJECT genesis)
endif()
include_directories(.)
include_directories(../b8util/)
include_directories(../tracy/)
add_definitions(-std=c++14 -DTRACY_ENABLE -pthread)
add_subdirectory(Physics)
add_subdirectory(Graphics)
add_subdirectory(NeuralNet)
add_subdirectory(Creature)
add_executable(genesis genesis.cpp ../tracy/TracyClient.cpp)
target_link_libraries(genesis Creature Graphics NeuralNet Physics ${SDL_LIBRARY} dl pthread)

