cmake_minimum_required(VERSION 3.0)
project(boids)
if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG -g")
	#set (CMAKE_C_COMPILER clang)
	#set (CMAKE_CXX_COMPILER clang++)
endif()
if(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE DEBUG)
endif()
if(MSVC)
	set_directory_properties(PROPERTIES VS_STARTUP_PROJECT boids)
	add_definitions(/std:c++14 -DTRACY_ENABLE)
else()
	add_definitions(-std=c++14 -DTRACY_ENABLE -pthread)
endif()
include_directories(.)
include_directories(../..)
include_directories(../../../b8util/)
include_directories(../../../tracy/)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../Physics ${CMAKE_CURRENT_BINARY_DIR}/Physics)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../Graphics ${CMAKE_CURRENT_BINARY_DIR}/Graphics)
add_executable(boids boids.cpp ../../../tracy/TracyClient.cpp)
if(MSVC)
	target_link_libraries (boids Physics Graphics ${SDL_LIBRARY})
else()
	target_link_libraries (boids Physics Graphics ${SDL_LIBRARY} dl pthread)
endif()