cmake_minimum_required(VERSION 3.0)
project(number_recognizer)
if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG -g")
	#set (CMAKE_C_COMPILER clang)
	#set (CMAKE_CXX_COMPILER clang++)
endif()
if(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE DEBUG)
endif()
if(MSVC)
	set_directory_properties(PROPERTIES VS_STARTUP_PROJECT number_recognizer)
endif()
include_directories(.)
include_directories(../..)
add_definitions(-std=c++14)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../NeuralNet ${CMAKE_CURRENT_BINARY_DIR}/NeuralNet)
add_executable(number_recognizer number_recognizer.cpp)
target_link_libraries (number_recognizer NeuralNet)
